grid html desktop

--- a/index.html
+++ b/index.html
@@ -59,6 +59,56 @@
     </figure>
   </header>
 
+  <div class="big-grid-container">
+    <div>
+      <div>
+        <h2>Transform your brand</h2>
+        <p class="grey--text">We are a full-service creative agency specializing in helping brands grow fast.
+          Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <p class="active-yellow">Learn more</p>
+      </div>
+    </div>
+    <div><img src="/images/desktop/image-transform.jpg" alt="" class="big-transform-img"></div>
+    <div><img src="/images/desktop/image-stand-out.jpg" alt="" class="big-stand-out-img"></div>
+    <div>
+      <div class="main__text">
+        <h2> Stand out to the right audience</h2>
+        <p class="grey--text"> Using a collaborative formula of designers, researchers, photographers, videographers,
+          and
+          copywriters,
+          we’ll
+          build
+          and extend your brand in digital places.</p>
+        <p class="active-red">Learn more</p>
+      </div>
+    </div>
+    <div>
+      <div class="bg-graphic-design">
+        <div class="main__text">
+          <div class="main__text__container">
+            <h3>Graphic design</h3>
+            <p class="green--text"> Great design makes you memorable. We deliver artwork that underscores your brand
+              message
+              and
+              captures potential
+              clients’ attention.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bg-photography">
+      <div class="main__text">
+        <div class="main__text__container">
+          <h4>Photography</h4>
+          <p class="blue--text"> Increase your credibility by getting the most stunning, high-quality photos that
+            improve
+            your
+            business image.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <main>
     <div class="container">
       <div class="main__text">
