hero section adjustment desktop

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
       <div class="hero_container">
         <h1> We are creatives</h1>
-        <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg">
+        <svg class="arrow-down" width="36" height="114" xmlns="http://www.w3.org/2000/svg">
           <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round"
             stroke-linejoin="round">
             <path d="M18 3v100M3 95.484l15 15 15-15" />
@@ -68,8 +68,9 @@
         <p class="active-yellow">Learn more</p>
       </div>
     </div>
-    <div><img src="/images/desktop/image-transform.jpg" alt="" class="big-transform-img"></div>
-    <div><img src="/images/desktop/image-stand-out.jpg" alt="" class="big-stand-out-img"></div>
+    <div><img class="big-transform-img" src="/images/desktop/image-transform.jpg"
+        alt="image egg with yellow background"></div>
+    <div><img class="big-stand-out-img" src="/images/desktop/image-stand-out.jpg" alt="cup with pink background"></div>
     <div>
       <div class="main__text">
         <h2> Stand out to the right audience</h2>
@@ -162,41 +163,38 @@
         </div>
       </div>
     </div>
-
-    <div class="container">
-      <div class="testimonials">
-        <p class="grey--heading"> Client testimonials</p>
-        <div class="testimonial-text">
-          <img class="client--foto" src="/images/image-emily.jpg" alt="Emily picture">
-          <p class="testimonial-items"> We put our trust in Sunnyside and they delivered, making sure our needs were met
-            and deadlines were always
-            hit.</p>
-          <p><span class="bold-name">Emily R.</span> </p>
-          <p class="grey-occupation"> Marketing Director</span></p>
-        </div>
-
-
-        <div class="testimonial-text">
-          <img class="client--foto" src="/images/image-thomas.jpg" alt="Thomas picture">
-          <p class="testimonial-items">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
-            made it a satisfying and
-            enjoyable
-            experience.</p>
-          <p><span class="bold-name"> Thomas S.</span></p>
-          <p class="grey-occupation">Chief Operating Officer</span></p>
-        </div>
-        <div class="testimonial-text">
-          <img class="client--foto" src="/images/image-jennie.jpg" alt="Jennie Picture">
-          <p class="testimonial-items">
-            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-          <p><span class="bold-name">Jennie F.</span></p>
-          <p class="grey-occupation">Business Owner</span></p>
-        </div>
-      </div>
-    </div>
   </main>
 
+  <div class="container">
+    <div class="testimonials">
+      <p class="grey--heading"> Client testimonials</p>
+      <div class="testimonial-text">
+        <img class="client--foto" src="/images/image-emily.jpg" alt="Emily picture">
+        <p class="testimonial-items"> We put our trust in Sunnyside and they delivered, making sure our needs were met
+          and deadlines were always
+          hit.</p>
+        <p><span class="bold-name">Emily R.</span> </p>
+        <p class="grey-occupation"> Marketing Director</span></p>
+      </div>
 
+      <div class="testimonial-text">
+        <img class="client--foto" src="/images/image-thomas.jpg" alt="Thomas picture">
+        <p class="testimonial-items">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
+          made it a satisfying and
+          enjoyable
+          experience.</p>
+        <p><span class="bold-name"> Thomas S.</span></p>
+        <p class="grey-occupation">Chief Operating Officer</span></p>
+      </div>
+      <div class="testimonial-text">
+        <img class="client--foto" src="/images/image-jennie.jpg" alt="Jennie Picture">
+        <p class="testimonial-items">
+          Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p><span class="bold-name">Jennie F.</span></p>
+        <p class="grey-occupation">Business Owner</span></p>
+      </div>
+    </div>
+  </div>
 
   <section>
     <div class="grid-container">
