main section grid desktop

--- a/index.html
+++ b/index.html
@@ -61,26 +61,30 @@
 
   <div class="big-grid-container">
     <div>
-      <div>
+      <div class="grid-item">
         <h2>Transform your brand</h2>
         <p class="grey--text">We are a full-service creative agency specializing in helping brands grow fast.
           Engage your clients through compelling visuals that do most of the marketing for you.</p>
         <p class="active-yellow">Learn more</p>
       </div>
     </div>
-    <div><img class="big-transform-img" src="/images/desktop/image-transform.jpg"
-        alt="image egg with yellow background"></div>
-    <div><img class="big-stand-out-img" src="/images/desktop/image-stand-out.jpg" alt="cup with pink background"></div>
+    <div>
+      <img class="big-transform-img" src="/images/desktop/image-transform.jpg" alt="image egg with yellow background">
+    </div>
+    <div>
+      <img class="big-stand-out-img" src="/images/desktop/image-stand-out.jpg" alt="cup with pink background"></div>
     <div>
       <div class="main__text">
-        <h2> Stand out to the right audience</h2>
-        <p class="grey--text"> Using a collaborative formula of designers, researchers, photographers, videographers,
-          and
-          copywriters,
-          we’ll
-          build
-          and extend your brand in digital places.</p>
-        <p class="active-red">Learn more</p>
+        <div class="grid-item">
+          <h2> Stand out to the right audience</h2>
+          <p class="grey--text"> Using a collaborative formula of designers, researchers, photographers, videographers,
+            and
+            copywriters,
+            we’ll
+            build
+            and extend your brand in digital places.</p>
+          <p class="active-red">Learn more</p>
+        </div>
       </div>
     </div>
     <div>
