--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
   <title> Sunnyside agency landing page</title>
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -74,17 +75,15 @@
     <div>
       <img class="big-stand-out-img" src="/images/desktop/image-stand-out.jpg" alt="cup with pink background"></div>
     <div>
-      <div class="main__text">
-        <div class="grid-item">
-          <h2> Stand out to the right audience</h2>
-          <p class="grey--text"> Using a collaborative formula of designers, researchers, photographers, videographers,
-            and
-            copywriters,
-            we’ll
-            build
-            and extend your brand in digital places.</p>
-          <p class="active-red">Learn more</p>
-        </div>
+      <div class="grid-item">
+        <h2> Stand out to the right audience</h2>
+        <p class="grey--text"> Using a collaborative formula of designers, researchers, photographers, videographers,
+          and
+          copywriters,
+          we’ll
+          build
+          and extend your brand in digital places.</p>
+        <p class="active-red">Learn more</p>
       </div>
     </div>
     <div>
