--- a/index.html
+++ b/index.html
@@ -169,32 +169,34 @@
   </main>
 
   <div class="container">
+
     <div class="testimonials">
       <p class="grey--heading"> Client testimonials</p>
-      <div class="testimonial-text">
-        <img class="client--foto" src="/images/image-emily.jpg" alt="Emily picture">
-        <p class="testimonial-items"> We put our trust in Sunnyside and they delivered, making sure our needs were met
-          and deadlines were always
-          hit.</p>
-        <p><span class="bold-name">Emily R.</span> </p>
-        <p class="grey-occupation"> Marketing Director</span></p>
-      </div>
-
-      <div class="testimonial-text">
-        <img class="client--foto" src="/images/image-thomas.jpg" alt="Thomas picture">
-        <p class="testimonial-items">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
-          made it a satisfying and
-          enjoyable
-          experience.</p>
-        <p><span class="bold-name"> Thomas S.</span></p>
-        <p class="grey-occupation">Chief Operating Officer</span></p>
-      </div>
-      <div class="testimonial-text">
-        <img class="client--foto" src="/images/image-jennie.jpg" alt="Jennie Picture">
-        <p class="testimonial-items">
-          Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-        <p><span class="bold-name">Jennie F.</span></p>
-        <p class="grey-occupation">Business Owner</span></p>
+      <div class="testimonials-container">
+        <div class="testimonial-text">
+          <img class="client--foto" src="/images/image-emily.jpg" alt="Emily picture">
+          <p class="testimonial-items"> We put our trust in Sunnyside and they delivered, making sure our needs were met
+            and deadlines were always
+            hit.</p>
+          <p><span class="bold-name">Emily R.</span> </p>
+          <p class="grey-occupation"> Marketing Director</span></p>
+        </div>
+        <div class="testimonial-text">
+          <img class="client--foto" src="/images/image-thomas.jpg" alt="Thomas picture">
+          <p class="testimonial-items">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
+            made it a satisfying and
+            enjoyable
+            experience.</p>
+          <p><span class="bold-name"> Thomas S.</span></p>
+          <p class="grey-occupation">Chief Operating Officer</span></p>
+        </div>
+        <div class="testimonial-text">
+          <img class="client--foto" src="/images/image-jennie.jpg" alt="Jennie Picture">
+          <p class="testimonial-items">
+            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <p><span class="bold-name">Jennie F.</span></p>
+          <p class="grey-occupation">Business Owner</span></p>
+        </div>
       </div>
     </div>
   </div>
