small image gallery desktop

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </div>
     </div>
   </div>
-
+  <!-- small image gallery -->
   <section>
     <div class="grid-container">
       <figure class="gallery__item gallery__item-1">
