--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="header-img">
 
       <nav class="navigation">
-        <a href="#home"><img class="logo" src="./images/logo.svg" alt="logo Sunnyside"></a>
+        <a href="#home"><img class="logo" src="images/logo.svg" alt="logo Sunnyside"></a>
         <div class="top-nav">
           <ul id="menuLinks" class="nav_links">
             <li><a class="nav__items" href="#about">About</a></li>
@@ -65,7 +65,7 @@
       </div>
     </div>
     <figure>
-      <img class="banner-img" src="/images/mobile/image-transform.jpg" alt="">
+      <img class="banner-img" src="images/mobile/image-transform.jpg" alt="">
     </figure>
   </header>
 
@@ -79,10 +79,10 @@
       </div>
     </div>
     <div>
-      <img class="big-transform-img" src="/images/desktop/image-transform.jpg" alt="image egg with yellow background">
+      <img class="big-transform-img" src="images/desktop/image-transform.jpg" alt="image egg with yellow background">
     </div>
     <div>
-      <img class="big-stand-out-img" src="/images/desktop/image-stand-out.jpg" alt="cup with pink background"></div>
+      <img class="big-stand-out-img" src="images/desktop/image-stand-out.jpg" alt="cup with pink background"></div>
     <div>
       <div class="grid-item">
         <h2> Stand out to the right audience</h2>
@@ -128,7 +128,7 @@
         <div>
           <h2>Transform your brand</h2>
           <figure class="big-gallery-item-1">
-            <img src="/images/desktop/image-transform.jpg" alt="" class="big-gallery-img">
+            <img src="images/desktop/image-transform.jpg" alt="" class="big-gallery-img">
           </figure>
           <p class="grey--text">We are a full-service creative agency specializing in helping brands grow fast.
             Engage your clients through compelling visuals that do most of the marketing for you.</p>
@@ -138,7 +138,7 @@
     </div>
 
     <div class="container-wide">
-      <img class="stand-out-img " src="/images/mobile/image-stand-out.jpg" alt="">
+      <img class="stand-out-img " src="images/mobile/image-stand-out.jpg" alt="">
     </div>
 
     <div class="main__text">
@@ -183,7 +183,7 @@
       <p class="grey--heading"> Client testimonials</p>
       <div class="testimonials-container">
         <div class="testimonial-text">
-          <img class="client--foto" src="/images/image-emily.jpg" alt="Emily picture">
+          <img class="client--foto" src="images/image-emily.jpg" alt="Emily picture">
           <p class="testimonial-items"> We put our trust in Sunnyside and they delivered, making sure our needs were met
             and deadlines were always
             hit.</p>
@@ -191,7 +191,7 @@
           <p class="grey-occupation"> Marketing Director</span></p>
         </div>
         <div class="testimonial-text">
-          <img class="client--foto" src="/images/image-thomas.jpg" alt="Thomas picture">
+          <img class="client--foto" src="images/image-thomas.jpg" alt="Thomas picture">
           <p class="testimonial-items">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
             made it a satisfying and
             enjoyable
@@ -200,7 +200,7 @@
           <p class="grey-occupation">Chief Operating Officer</span></p>
         </div>
         <div class="testimonial-text">
-          <img class="client--foto" src="/images/image-jennie.jpg" alt="Jennie Picture">
+          <img class="client--foto" src="images/image-jennie.jpg" alt="Jennie Picture">
           <p class="testimonial-items">
             Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
           <p><span class="bold-name">Jennie F.</span></p>
@@ -213,16 +213,16 @@
   <section>
     <div class="grid-container">
       <figure class="gallery__item gallery__item-1">
-        <img class="gallery__img" src="/images/mobile/image-gallery-milkbottles.jpg" alt="">
+        <img class="gallery__img" src="images/mobile/image-gallery-milkbottles.jpg" alt="">
       </figure>
       <figure class="gallery__item gallery__item-2">
-        <img class="gallery__img" src="/images/mobile/image-gallery-orange.jpg" alt="">
+        <img class="gallery__img" src="images/mobile/image-gallery-orange.jpg" alt="">
       </figure>
       <figure class="gallery__item gallery__item-3">
-        <img class="gallery__img" src="/images/mobile/image-gallery-cone.jpg" alt="">
+        <img class="gallery__img" src="images/mobile/image-gallery-cone.jpg" alt="">
       </figure>
       <figure class="gallery__item gallery__item-4">
-        <img class="gallery__img" src="/images/mobile/image-gallery-sugar-cubes.jpg" alt="">
+        <img class="gallery__img" src="images/mobile/image-gallery-sugar-cubes.jpg" alt="">
       </figure>
     </div>
 
